--- a/app/src/main/res/layout/fragment_hot.xml
+++ b/app/src/main/res/layout/fragment_hot.xml
@@ -1,29 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:windowSoftInputMode="stateHidden">
 
-    <TextView
-        android:id="@+id/textView"
-        android:gravity="center"
-        android:text="1231"
-        android:padding="@dimen/dp50"
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="160dp" />
+
+    <RelativeLayout
+        android:id="@+id/rl_more"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp15"
+            android:drawableLeft="@mipmap/sy_hb"
+            android:drawablePadding="@dimen/dp10"
+            android:gravity="center_vertical"
+            android:text="热门推荐"
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/sp14" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp15"
+            android:src="@mipmap/sy_gd" />
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/textView1"
-        android:padding="@dimen/dp15"
-        android:text="加载"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp15"
+        android:text="加载" />
+
     <TextView
         android:id="@+id/textView2"
-        android:text="停止"
-        android:padding="@dimen/dp15"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp15"
+        android:text="停止" />
 </LinearLayout>
