--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,9 +13,9 @@
         app:tabIndicatorColor="#F00"
         app:tabIndicatorHeight="0dp"
         app:tabMode="scrollable"
-        app:tabPaddingStart="@dimen/dp15"
-        app:tabSelectedTextColor="#F00"
-        app:tabTextColor="#1d1c1d"></android.support.design.widget.TabLayout>
+        app:tabPaddingStart="@dimen/dp5"
+        app:tabSelectedTextColor="@color/titleColor"
+        app:tabTextColor="@color/textColor2"></android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
