--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#ffffff</color>
+    <color name="background">#f6f6f6</color>
+    <color name="line">#f8f8f8</color>
+    <color name="black">#000000</color>
+    <color name="textColor">#333333</color>
+    <color name="textColor2">#999999</color>
+    <color name="textSelectColor">#FE4650</color>
+    <color name="textColorHint">#000000</color>
+    <color name="titleColor">#333333</color>
 </resources>
