--- a/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/app/src/main/res/layout/activity_forget_pwd.xml
@@ -50,7 +50,7 @@
             android:layout_marginRight="@dimen/dp30"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="请输入密码"
+            android:hint="请输入验证码"
             android:maxLength="20"
             android:textColor="@color/textColor"
             android:textColorHint="@color/textColorHint"
