--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -45,7 +45,7 @@
                 android:paddingLeft="@dimen/dp15"
                 android:paddingRight="@dimen/dp15"
                 android:text="虚拟币记录"
-                android:textColor="@color/white"
+                android:textColor="@color/whitecc"
                 android:textSize="@dimen/sp13" />
 
             <ImageView
