--- a/app/src/main/res/layout/item_fans.xml
+++ b/app/src/main/res/layout/item_fans.xml
@@ -5,16 +5,16 @@
     android:gravity="center_vertical">
 
     <View
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp1"
+        android:layout_alignParentBottom="true"
         android:background="@color/line" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_centerVertical="true"
         android:id="@+id/iv_head"
         android:layout_width="@dimen/dp70"
         android:layout_height="@dimen/dp70"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dp15"
         android:src="@mipmap/ic_launcher" />
 
@@ -36,11 +36,11 @@
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginTop="@dimen/dp5"
         android:layout_toEndOf="@+id/iv_head"
-        android:paddingLeft="@dimen/dp5"
-        android:paddingRight="@dimen/dp5"
         android:background="@drawable/shape_corner5_red"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/dp5"
+        android:paddingRight="@dimen/dp5">
 
         <ImageView
             android:id="@+id/iv_sex"
@@ -58,13 +58,31 @@
             android:textSize="@dimen/sp10" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_attention"
-        android:layout_width="57dp"
-        android:layout_height="26dp"
+    <TextView
+        android:id="@+id/tv_attention"
+        android:layout_width="@dimen/dp65"
+        android:layout_height="28dp"
+        android:gravity="center"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/dp15"
-        android:src="@mipmap/wdfs_gz" />
+        android:background="@drawable/shape_bg_eb15"
+        android:text="关注"
+        android:textColor="@color/textColor2"
+        android:textSize="12sp" />
+
+    <!--android:paddingBottom="@dimen/dp5"-->
+    <!--android:paddingRight="@dimen/dp12"-->
+    <!--android:paddingLeft="@dimen/dp12"-->
+    <!--android:paddingTop="@dimen/dp5"-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/iv_attention"-->
+    <!--android:layout_width="57dp"-->
+    <!--android:layout_height="26dp"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_marginRight="@dimen/dp15"-->
+    <!--android:src="@mipmap/wdfs_gz" />-->
 
 </RelativeLayout>
