--- a/app/src/main/res/layout/item_package_recharge.xml
+++ b/app/src/main/res/layout/item_package_recharge.xml
@@ -4,7 +4,7 @@
     android:layout_height="@dimen/dp60"
     android:layout_margin="@dimen/dp8">
 
-    <ImageView
+    <CheckBox
         android:id="@+id/check"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
