--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="titleColor">#333333</color>
     <color name="background_eb">#ebebeb</color>
     <color name="bg_f6">#f6f6f6</color>
+    <color name="boy_color">#599BFD</color>
 </resources>
