--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/iv_head_big"
             android:scaleType="centerCrop"
-            android:background="@mipmap/ic_launcher"
+            android:src="@mipmap/wd_tx_nor"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
         <ImageView
