--- a/app/src/main/res/layout/item_fans.xml
+++ b/app/src/main/res/layout/item_fans.xml
@@ -30,6 +30,7 @@
         android:textSize="@dimen/sp14" />
 
     <LinearLayout
+        android:id="@+id/ll_sex_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_userId"
