1.第一轮测试完成; 2.添加启动页; 3.修改完列表重复bug。

--- a/app/src/main/res/layout/activity_anchors_skills.xml
+++ b/app/src/main/res/layout/activity_anchors_skills.xml
@@ -153,7 +153,7 @@
                         android:id="@+id/iv_attention"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
-                        android:src="@mipmap/zbjn_ygz" />
+                        android:src="@mipmap/zbjn_wgz" />
 
                     <TextView
                         android:id="@+id/tv_attention"
