--- a/app/src/main/res/layout/activity_editing_materials.xml
+++ b/app/src/main/res/layout/activity_editing_materials.xml
@@ -217,6 +217,7 @@
         android:background="@color/line" />
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/ll_area"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp50"
@@ -247,6 +248,7 @@
     </LinearLayout>
 
     <View
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp0.5"
         android:background="@color/line" />
