--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp50"
+        android:orientation="horizontal"
         android:layout_marginTop="@dimen/dp10">
 
         <EditText
@@ -80,7 +81,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/dp20"
-        android:layout_marginTop="@dimen/dp10"
         android:orientation="horizontal">
 
         <CheckBox
@@ -104,6 +104,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="《用户协议》"
+            android:paddingTop="@dimen/dp10"
+            android:paddingBottom="@dimen/dp10"
             android:textColor="@color/textSelectColor"
             android:textSize="@dimen/sp13" />
 
@@ -119,6 +121,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="《隐私政策》"
+            android:paddingTop="@dimen/dp10"
+            android:paddingBottom="@dimen/dp10"
             android:textColor="@color/textSelectColor"
             android:textSize="@dimen/sp13" />
     </LinearLayout>
