--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -115,7 +115,6 @@
     </android.support.v7.widget.RecyclerView>
 
     <TextView
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp10"
@@ -124,15 +123,16 @@
         android:paddingTop="@dimen/dp15"
         android:text="请选择支付方式"
         android:textColor="@color/textColor2"
-        android:textSize="@dimen/sp16" />
+        android:textSize="@dimen/sp16"
+        android:visibility="gone" />
 
     <LinearLayout
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/dp20">
+        android:paddingBottom="@dimen/dp20"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_pay_ali"
@@ -160,8 +160,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp15"
-        android:layout_marginTop="@dimen/dp10">
+        android:layout_marginLeft="@dimen/dp15">
 
         <TextView
             android:layout_width="wrap_content"
@@ -172,6 +171,8 @@
             android:id="@+id/tv_protocol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/dp5"
+            android:paddingTop="@dimen/dp10"
             android:text="《充值服务协议》"
             android:textColor="@color/textSelectColor" />
     </LinearLayout>
