--- a/app/src/main/res/layout/activity_my_wealth.xml
+++ b/app/src/main/res/layout/activity_my_wealth.xml
@@ -22,8 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/dp25"
+            android:layout_marginTop="@dimen/dp15"
             android:drawablePadding="@dimen/dp5"
+            android:padding="@dimen/dp10"
             android:drawableRight="@mipmap/wdcf_ts"
             android:text="可提现金额(元)"
             android:textColor="@color/whitecc"
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/dp20"
+            android:layout_marginTop="@dimen/dp10"
             android:text=""
             android:textColor="@color/white"
             android:textSize="32sp"
