--- a/app/src/main/res/layout/activity_receive_room.xml
+++ b/app/src/main/res/layout/activity_receive_room.xml
@@ -15,6 +15,7 @@
         android:src="@mipmap/th_bg" />
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
