--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".login.LoginActivity">
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="44dp"
+        android:layout_height="@dimen/dp45"
+        android:layout_centerVertical="true"
+        android:paddingLeft="@dimen/dp20"
+        android:paddingRight="@dimen/dp15"
+        android:src="@mipmap/fh" />
+    <!--<include layout="@layout/title_common" />-->
 
     <TextView
         android:layout_width="wrap_content"
