--- a/app/src/main/res/layout/activity_my_dynamic.xml
+++ b/app/src/main/res/layout/activity_my_dynamic.xml
@@ -35,8 +35,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp10"
-        android:background="@color/line" />
+        android:layout_height="@dimen/dp0.5"
+        android:background="@color/line2" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
