--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -32,8 +32,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp1"
-        android:background="@color/line" />
+        android:layout_height="@dimen/dp0.5"
+        android:background="@color/line2" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayout"
