--- a/app/src/main/res/layout/item_dynamic.xml
+++ b/app/src/main/res/layout/item_dynamic.xml
@@ -26,9 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textStyle="bold"
             android:textColor="@color/textColor"
-            android:textSize="@dimen/sp15" />
+            android:textSize="@dimen/sp15"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/iv_sex"
@@ -39,13 +39,11 @@
             android:src="@mipmap/dt_boy" />
     </LinearLayout>
 
-
     <TextView
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_nick"
-        android:layout_marginBottom="@dimen/dp10"
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginRight="@dimen/dp25"
         android:layout_marginTop="@dimen/dp5"
@@ -54,23 +52,36 @@
         android:textColor="@color/textColor666"
         android:textSize="@dimen/sp14" />
 
+    <TextView
+        android:id="@+id/tv_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_content"
+        android:layout_marginLeft="@dimen/dp10"
+        android:layout_toEndOf="@+id/iv_head"
+        android:padding="@dimen/dp5"
+        android:text="全文"
+        android:textColor="@color/textColor2"
+        android:textSize="@dimen/sp14"
+        android:visibility="gone" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_recycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_content"
+        android:layout_below="@+id/tv_more"
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginRight="@dimen/dp45"
-        android:layout_marginTop="@dimen/dp3"
+        android:layout_marginTop="@dimen/dp10"
         android:layout_toEndOf="@+id/iv_head"></android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_recycleView"
+        android:layout_marginBottom="@dimen/dp15"
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginTop="@dimen/dp10"
-        android:layout_marginBottom="@dimen/dp15"
         android:layout_toEndOf="@+id/iv_head"
         android:gravity="center_vertical"
         android:orientation="horizontal">
